<resources>
    <string name="app_name">ContactsV2</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="enter_number_here">Enter number here</string>
    <string name="add">Add</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="find">Find</string>
    <string name="card_name">Name</string>
    <string name="card_number">Number</string>
</resources>